# check_system

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  QtHello.cpp  README  README.md  clean.sh  qt  qt.pro  tags
Modules/Conf/: conf.cpp  conf.h
Modules/Log/: .log.h.swp  a.out  log.cpp  log.h  log.html  log.txt  test.cpp  trace.h
Modules/Net/: String.h  a.out  autotype.h  log.html  log.txt  prot.cpp  prot.h  protInit.h  tags  test.cpp
Modules/Net/cli/: Makefile  cli.pro  net.cpp  net.h
bin.check_cli/: check_cli  cli.conf  log.html
bin.check_srv/: check_srv  fisherfaces_at.xml  log.html  log.txt  srv.conf  worktime.db
check_cli/: .qdevelop  CMakeLists.txt  Makefile  check_cli.pro
check_cli/src/: .mainwindowimpl.cpp.swp  .mainwindowimpl.h.swp  globalVar.h  main.cpp  mainwindowimpl.cpp  mainwindowimpl.h  netOperate.cpp  netOperate.h
check_cli/ui/: mainwindow.ui
check_srv/: CMakeLists.txt  Makefile  check_srv  check_srv.pro
check_srv/src/: .netOperate.cpp.swp  db.cpp  db.cpp~  db.h  faceDetect.cpp  faceDetect.h  faceRecognition.cpp  faceRecognition.h  globalVar.h  main.cpp  netOperate.cpp  netOperate.h  sqlitedb.cpp
check_srv/src/test/: CMakeLists.txt
lib/: libopencv_calib3d.so.2.3  libopencv_calib3d.so.2.3.1  libopencv_contrib.so.2.3  libopencv_contrib.so.2.3.1  libopencv_core.so.2.3  libopencv_core.so.2.3.1  libopencv_features2d.so.2.3  libopencv_features2d.so.2.3.1  libopencv_flann.so.2.3  libopencv_flann.so.2.3.1  libopencv_gpu.so.2.3  libopencv_gpu.so.2.3.1  libopencv_highgui.so.2.3  libopencv_highgui.so.2.3.1  libopencv_imgproc.so.2.3  libopencv_imgproc.so.2.3.1  libopencv_legacy.so.2.3  libopencv_legacy.so.2.3.1  libopencv_ml.so.2.3  libopencv_ml.so.2.3.1  libopencv_objdetect.so.2.3  libopencv_objdetect.so.2.3.1  libopencv_video.so.2.3  libopencv_video.so.2.3.1
lib/opencv/: libopencv_calib3d.so.2.4  libopencv_calib3d.so.2.4.4  libopencv_contrib.so.2.4  libopencv_contrib.so.2.4.4  libopencv_core.so.2.4  libopencv_core.so.2.4.4  libopencv_features2d.so.2.4  libopencv_features2d.so.2.4.4  libopencv_flann.so.2.4  libopencv_flann.so.2.4.4  libopencv_gpu.so.2.4  libopencv_gpu.so.2.4.4  libopencv_highgui.so.2.4  libopencv_highgui.so.2.4.4  libopencv_imgproc.so.2.4  libopencv_imgproc.so.2.4.4  libopencv_legacy.so.2.4  libopencv_legacy.so.2.4.4  libopencv_ml.so.2.4  libopencv_ml.so.2.4.4  libopencv_nonfree.so.2.4  libopencv_nonfree.so.2.4.4  libopencv_objdetect.so.2.4  libopencv_objdetect.so.2.4.4  libopencv_photo.so.2.4  libopencv_photo.so.2.4.4  libopencv_stitching.so.2.4  libopencv_stitching.so.2.4.4  libopencv_ts.so.2.4  libopencv_ts.so.2.4.4  libopencv_video.so.2.4  libopencv_video.so.2.4.4  libopencv_videostab.so.2.4  libopencv_videostab.so.2.4.4
share/OpenCV/: OpenCVConfig-version.cmake  OpenCVConfig.cmake
(+28 files in other folders)
