PROJECT(check_cli)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_DONT_USE_QTGUI TRUE)
INCLUDE(${QT_USE_FILE})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
QT4_WRAP_CPP(check_cli_MOCS mainwindow.h)
QT4_WRAP_UI(check_cli_UIS mainwindow.ui)
ADD_EXECUTABLE(check_cli main.cpp mainwindow.cpp ${check_cli_MOCS})
TARGET_LINK_LIBRARIES(check_cli ${QT_LIBRARIES})
